--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/johannranudd/joker/issues"
   },
-  "homepage": "https://github.com/johannranudd/joker#readme"
+  "homepage": "https://github.com/johannranudd/joker#readme",
+  "dependencies": {
+    "one-liner-joke": "^1.2.2"
+  }
 }
